strategy-canary/deployv1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deploy-v1
spec: 
  replicas: 4
  selector: 
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels: 
        app: nginx
        version: v1
    spec: 
      containers:
        - name: nginx
          image: nginx:1.23
