strategy-canary/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`julianorib.com`)
      kind: Rule
      services:
      - name: nginx-service
        port: 8080
      middlewares:
        - name: app-ratelimit
